Criei o cron que verifica se há algum credito a ser aprovado

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,5 @@
 infra/banco_dados/modelo_dados.mwb.bak
 .vscode/launch.json
 infra/api/app/model/__pycache__/
+infra/api/app/model/cron/__pycache__/
 .ipynb_checkpoints/
