--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,6 +11,7 @@ services:
     volumes:
       - .\api\app:/app
       - ..\bootcamp-solicitacoescredito.csv:/data/dadosclientes.csv
+      - ..\Models:/Models
     command: sh -c "pip install --no-cache-dir -r /app/requirements.txt && python /app/importar_dados.py && python /app/app.py"     
     depends_on:
       - bancodados
