--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 .ipynb_checkpoints
 infra/banco_dados/modelo_dados.mwb.bak
 .vscode/launch.json
+infra/api/app/__pycache__/
 infra/api/app/model/__pycache__/
 infra/api/app/model/cron/__pycache__/
 .ipynb_checkpoints/
